contact web intro pic chang to full & try new feat

--- a/categories.html
+++ b/categories.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="row mt-md-5">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3">
                 <div class="product5-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_4.jpg.webp" alt="product5"
                         class="img-fluid">
