--- a/contact.html
+++ b/contact.html
@@ -54,14 +54,16 @@
             </nav>
         </div>
     </div>
-    <div class="container w3-animate-bottom">
+    <div class="container-fluid w3-animate-bottom">
         <div class="background-img">
             <!--img-->
-            <div class="links ml-3">
-                <a href="home.html" class="text-decoration-none w3-hover-text-red">Home</a>
-                <span class="text-light">/</span>
-                <a href="#" class="btn disabled text-decoration-none text-danger">Contact</a>
-            </div>
+           <div class="container">
+             <div class="links ml-3">
+                 <a href="home.html" class="text-decoration-none w3-hover-text-red">Home</a>
+                 <span class="text-light">/</span>
+                 <a href="#" class="btn disabled text-decoration-none text-danger">Contact</a>
+             </div>
+           </div>
         </div>
     </div>
     <div class="container w3-animate-bottom">
@@ -133,7 +135,7 @@
     <div class="container-fluid mt-5 w3-animate-bottom">
         <div class="center">
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387239.74771779357!2d-74.20902059960937!3d40.689158152629616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sse!4v1698010459531!5m2!1sen!2sse" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387239.74771779357!2d-74.20902059960937!3d40.689158152629616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sse!4v1698010459531!5m2!1sen!2sse" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
