--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
         <script src="/script.js/slider.js"></script>
     </div>
     <div class="container w3-animate-right">
-        <div class="row mt-3 w-100" id="second-row">
+        <div class="row mt-3 w-100" id="main-second-row">
             <div class="col-md-4 col-sm-4 col-lg-5" id="phone-col">
                 <div class="phone">
                     <p>Smart Phones</p>
