--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="container-fluid  bg-light">
+    <div class="container-fluid w3-animate-zoom  bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-dark justify-content-between">
                 <a class="navbar-brand overflow-auto mt-4" href="home.html"><span
@@ -56,7 +56,7 @@
             </nav>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid w3-animate-bottom">
         <div class="intro-background-img">
             <!--img-->
             <div class="container">
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <div class="container mt-md-5 mt-sm-3">
+    <div class="container w3-animate-bottom mt-md-5 mt-sm-3">
         <div class="info">
             <div class="products">
                 <p>Product</p>
@@ -88,7 +88,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container w3-animate-bottom">
         <main>
             <div class="product1 mt-5">
                 <div class="product1-img">
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </main>
-        <div class="main-buttons mt-5">
+        <div class="main-buttons mt-5 w3-animate-bottom">
             <div class="inside-buttons">
                 <div class="proceed">
                     <button class="p-4"><a href="#" class="text-decoration-none">Continue Shipping</a></button>
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-    <div class="container" id="shipping-method">
+    <div class="container w3-animate-bottom" id="shipping-method">
         <div class="row" id="shipping-row">
             <div class="col-md-4" id="first-col">
                 <div>
@@ -208,7 +208,7 @@
             </div>
         </div>
     </div>
-    <div class="contanier-fluid" id="footer">
+    <div class="contanier-fluid w3-animate-left" id="footer">
         <footer>
             <div class="container">
                 <div class="information">
