--- a/categories.html
+++ b/categories.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/CSS/index.css">
 </head>
 <body>
-    <div class="container-fluid  bg-light">
+    <div class="container-fluid w3-animate-zoom  bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-dark justify-content-between">
                 <a class="navbar-brand overflow-auto mt-4" href="home.html"><span
@@ -64,7 +64,7 @@
             </section>
         </div>
     </div>
-    <div class="container" id="tap-gallery">
+    <div class="container w3-animate-bottom" id="tap-gallery">
         <h3 class="overflow-auto font-weight-bold mt-md-5">Products</h3>
         <div class="row items-rwo">
             <div class="col-md-3 col-sm-6 product">
@@ -151,7 +151,7 @@
             </div>
         </div>
     </div><br><br><br>
-    <div class="container mt-4 ">
+    <div class="container mt-4 w3-animate-left ">
         <div class="row service text-center">
             <div class="col-md-4">
                 <img src="https://preview.colorlib.com/theme/sublime/images/icon_1.svg" alt="pic1" class="img-fluid w-25">
@@ -177,7 +177,7 @@
             </div>
         </div>
     </div>
-    <div class="container subscription">
+    <div class="container subscription w3-animate-right">
         <div class="sub">
            <div class="news">
                 <h3>Subscribe to our newsletter
@@ -190,7 +190,7 @@
            </div>
         </div>
     </div>
-    <div class="contanier-fluid" id="footer">
+    <div class="contanier-fluid w3-animate-left" id="footer">
         <footer>
             <div class="container">
                 <div class="information">
