--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div class="container-fluid  bg-light">
+    <div class="container-fluid w3-animate-zoom bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-dark justify-content-between">
                 <a class="navbar-brand overflow-auto mt-4" href="home.html"><span
@@ -72,7 +72,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container w3-animate-bottom">
         <div class="row mt-5" id="info-row">
             <div class="col mt-5">
                 <div class="registration-form">
@@ -162,7 +162,7 @@
             </div>
         </div>
     </div>
-    <div class="contanier-fluid" id="footer">
+    <div class="contanier-fluid w3-animate-left" id="footer">
         <footer>
             <div class="container">
                 <div class="information">
