--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/CSS/contact.css">
 </head>
 <body>
-    <div class="container-fluid bg-light">
+    <div class="container-fluid w3-animate-zoom bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light border-dark justify-content-between">
                 <a class="navbar-brand overflow-auto mt-4" href="home.html"><span
@@ -54,7 +54,7 @@
             </nav>
         </div>
     </div>
-    <div class="container-fluid w3-animate-bottom">
+    <div class="container-fluid w3-animate-bottom mt-5">
         <div class="background-img">
             <!--img-->
            <div class="container">
