--- a/home.html
+++ b/home.html
@@ -58,7 +58,16 @@
     <div class="container-fluid mt-5" id="slider-container">
         <div class="slider">
             <div class="slide">
-                <div class="inner-slide w-50">
+                <div class="inner-slide">
+                    <h1>A new online shop experience</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec
+                        molestie.
+                    </p>
+                    <button class="btn p-3 w-25 text-light border-light">Shop Now</button>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="inner-slide">
                     <h1>A new online shop experience</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec
                         molestie.
@@ -67,16 +76,7 @@
                 </div>
             </div>
             <div class="slide">
-                <div class="inner-slide w-50">
-                    <h1>A new online shop experience</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec
-                        molestie.
-                    </p>
-                    <button class="btn p-3 w-25 text-light border-light">Shop Now</button>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="inner-slide w-50">
+                <div class="inner-slide">
                     <h1>A new online shop experience</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec
                         molestie.
@@ -88,7 +88,7 @@
         <script src="/script.js/slider.js"></script>
     </div>
     <div class="container w3-animate-right">
-        <div class="row mt-3 w-100" id="main-second-row">
+        <div class="row mt-3 overflow-auto" id="main-second-row">
             <div class="col-md-4 col-sm-4 col-lg-5" id="phone-col">
                 <div class="phone">
                     <p>Smart Phones</p>
