--- a/product.html
+++ b/product.html
@@ -16,18 +16,18 @@
     <!--w3-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <title>Document</title>
+    <title>Product</title>
     <link rel="stylesheet" href="/CSS/index.css">
     <link rel="stylesheet" href="/CSS/product.css">
 </head>
 
 <body>
-    <div class="container-fluid  bg-light">
+    <div class="container-fluid w3-animate-zoom  bg-light">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-dark justify-content-between">
-                <a class="navbar-brand overflow-auto" href="home.html"><span
+                <a class="navbar-brand overflow-auto mt-4" href="home.html"><span
                         class="text-uppercase logo">Sublime</span></a>
-                <div class="right-contents">
+                <div class="right-contents mt-4">
                     <form class="search">
                         <input type="text" placeholder="Search" class="searchinput">
                         <button type="button" class="searchbutton">
@@ -67,7 +67,7 @@
             </section>
         </div>
     </div>
-    <div class="container">
+    <div class="container w3-animate-bottom">
         <div class="row">
             <div class="col">
                 <div class="container mt-5">
@@ -96,7 +96,7 @@
                 </div>
                 <script src="/script.js/tapGallery.js"></script>
             </div>
-            <div class="col mt-5">
+            <div class="col mt-5 ">
                 <h3>Smart Phone</h3>
                 <div class="prices">
                     <h5 class="w3-text-red">$890</h5>
@@ -113,8 +113,8 @@
                     elit. Mauris consequat nisi ut mauris efficitur lacinia.
                 </p>
                 <div class="quantity">
-                    <input type="number" id="number" name="number" class="p-3 w-25 text-dark">
-                    <button class="btn w3-black text-light p-3">Add to Caart</button>
+                    <input type="number" value="1" style="width:100px;" class="p-3">
+                    <button class="btn w3-black text-light mt-2">Add to Caart</button>
                 </div>
                 <div class="share mt-5">
                     <div class="share-para">
@@ -130,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+    <div class="container w3-animate-bottom mt-5">
         <div class="links">
             <a href="#" class="active w3-text-black text-decoration-none"><h2>Description</h2></a>
             <h2>Reviews (1)</h2>
@@ -141,7 +141,7 @@
             ut mauris efficitur lacinia.
         </p>
     </div>
-    <div class="container mt-5">
+    <div class="container w3-animate-bottom mt-5">
         <h1 class="text-sm-center text-md-center font-weight-bold">Related Products</h1>
         <div class="row items-rwo mt-5">
             <div class="col-md-3 col-sm-6 product">
@@ -168,7 +168,7 @@
             </div>
         </div>
     </div>
-    <div class="container subscription">
+    <div class="container subscription w3-animate-right">
         <div class="sub">
            <div class="news">
                 <h3>Subscribe to our newsletter
@@ -181,7 +181,7 @@
            </div>
         </div>
     </div>
-    <div class="contanier-fluid" id="footer">
+    <div class="contanier-fluid w3-animate-left" id="footer">
         <footer>
             <div class="container">
                 <div class="information">
