Validation done and corrected

--- a/checkout.html
+++ b/checkout.html
@@ -8,14 +8,10 @@
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/cff48999ee.js" crossorigin="anonymous"></script>
     <!--bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="<KEY>" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="<KEY>" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="<KEY>"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!--w3-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Checkout</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/cart.css">
@@ -38,7 +34,7 @@
                     <div class="cart w3-hover-text-red">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <a href="cart.html"
-                            class="w3-hover-text-red text-decoration-none text-capitalize">Cart</i>
+                            class="w3-hover-text-red text-decoration-none text-capitalize">Cart
                         </a>
                     </div>
                     <div id="myNav" class="overlay">
@@ -140,19 +136,19 @@
                 </div>
                 <div class="payment-method mt-4">
                     <div class="paypal">
-                        <input type="radio" name="radio" id="radio">
+                        <input type="radio">
                         <p class="mt-3">Paypal</p>
                     </div>
                     <div class="cash">
-                        <input type="radio" name="radio" id="radio">
+                        <input type="radio">
                         <p class="mt-3">Cash</p>
                     </div>
                     <div class="credit">
-                        <input type="radio" name="radio" id="radio">
+                        <input type="radio">
                         <p class="mt-3">Credit</p>
                     </div>
                     <div class="direct-bank">
-                        <input type="radio" name="radio" id="radio">
+                        <input type="radio">
                         <p class="mt-3">Bank-transfer</p>
                     </div>
                 </div>
