--- a/cart.html
+++ b/cart.html
@@ -4,18 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="<KEY>" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="<KEY>"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="<KEY>"
-        crossorigin="anonymous"></script>
-    <!--w3-->
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <!--font awesome-->
-    <script src="https://kit.fontawesome.com/cff48999ee.js" crossorigin="anonymous"></script>
+   <!--font awesome-->
+   <script src="https://kit.fontawesome.com/cff48999ee.js" crossorigin="anonymous"></script>
+   <!--bootstrap-->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+   <!--w3-->
+   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/cart.css">
@@ -36,7 +31,7 @@
                     </form>
                     <div class="cart w3-hover-text-red">
                         <i class="fa-solid fa-cart-shopping"></i>
-                        <a href="cart.html" class="w3-hover-text-red text-decoration-none text-capitalize">Cart</i>
+                        <a href="cart.html" class="w3-hover-text-red text-decoration-none text-capitalize">Cart
                         </a>
                     </div>
                     <div id="myNav" class="overlay">
@@ -115,11 +110,11 @@
         <div class="main-buttons mt-5 w3-animate-bottom">
             <div class="inside-buttons">
                 <div class="proceed">
-                    <button class="p-4"><a href="#" class="text-decoration-none">Continue Shipping</a></button>
+                    <button class="p-4">Continue Shipping</button>
                 </div>
                 <div class="update-products">
-                    <button class="p-4"><a href="#" class="text-decoration-none">Clear Cart</a></button>
-                    <button class="p-4"><a href="#" class="text-decoration-none">Update Cart</a></button>
+                    <button class="p-4">Clear Cart</button>
+                    <button class="p-4">Update Cart</button>
                 </div>
             </div>
         </div>
@@ -134,7 +129,7 @@
                 <div class="delivery-options">
                     <div class="option">
                         <div class="form">
-                            <input type="radio" name="radio" id="radio" style="accent-color: #c90202;">
+                            <input type="radio" style="accent-color: rgb(15, 15, 146);">
                             <p class="mt-3">Next day delivery</p>
                         </div>
                         <div class="option-price">
@@ -143,7 +138,7 @@
                     </div>
                     <div class="option">
                         <div class="form">
-                            <input type="radio" name="radio" id="radio" style="accent-color: #c90202;">
+                            <input type="radio" style="accent-color: rgb(15, 15, 146);">
                             <p class="mt-3">Standard delivery</p>
                         </div>
                         <div class="option-price">
@@ -152,7 +147,7 @@
                     </div>
                     <div class="option">
                         <div class="form">
-                            <input type="radio" name="radio" id="radio" style="accent-color: #c90202;">
+                            <input type="radio" style="accent-color: rgb(15, 15, 146);">
                             <p class="mt-3">Personal pick-up</p>
                         </div>
                         <div class="option-price">
@@ -167,7 +162,7 @@
                     </div>
                     <div class="code-input">
                         <input class="p-2 form-control" type="text" name="code" id="code">
-                        <button class="p-2" type="button"><a href="#" class="text-decoration-none">Apply</a></button>
+                        <button class="p-2" type="button">Apply</button>
                     </div>
                 </div>
             </div>
@@ -203,7 +198,7 @@
                     </div>
                 </div>
                 <button class="p-3 w-100 mt-3" type="button">
-                    <a href="#" class="text-decoration-none">Proceed to checkout</a>
+                    Proceed to checkout
                 </button>
             </div>
         </div>
@@ -231,5 +226,4 @@
         </footer>
     </div>
 </body>
-
 </html>
