--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,10 @@
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/cff48999ee.js" crossorigin="anonymous"></script>
     <!--bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="<KEY>" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="<KEY>" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="<KEY>"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!--w3-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Contact</title>
     <link rel="stylesheet" href="/CSS/index.css">
     <link rel="stylesheet" href="/CSS/contact.css">
@@ -34,7 +30,7 @@
                     <div class="cart w3-hover-text-red">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <a href="cart.html"
-                            class="w3-hover-text-red text-decoration-none text-capitalize">Cart</i>
+                            class="w3-hover-text-red text-decoration-none text-capitalize">Cart
                         </a>
                     </div>
                     <div id="myNav" class="overlay">
@@ -69,7 +65,7 @@
     <div class="container w3-animate-bottom">
         <div class="row" id="row">
             <div class="col-md-9 mt-5">
-                <form action="">
+                <form action="contact">
                     <h3 class="font-weight-bolder">Get in Touch
                     </h3>
                     <p class="w3-opacity">Say hello</p>
@@ -97,8 +93,7 @@
                         <label for="message">Message</label>
                         <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                     </div>
-                
-                    <button type="submit" class="btn text-light bg-dark p-3 w-50"><a href="mailto:yourmail@gmail.com" class="text-decoration-none text-light">Send Message</a></button>
+                    <a href="mailto:yourmail@gmail.com" class="text-decoration-none text-light btn text-light bg-dark p-3 w-50">Send Message</a>
                 </form>
             </div>
             <div class="col-md-3 w3-animate-bottom">
