--- a/product.html
+++ b/product.html
@@ -5,17 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--font awesome-->
-    <script src="https://kit.fontawesome.com/cff48999ee.js" crossorigin="anonymous"></script>
-    <!--bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="<KEY>" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="<KEY>" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="<KEY>"
-        crossorigin="anonymous"></script>
-    <!--w3-->
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+   <!--font awesome-->
+   <script src="https://kit.fontawesome.com/cff48999ee.js" crossorigin="anonymous"></script>
+   <!--bootstrap-->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+   <!--w3-->
+   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Product</title>
     <link rel="stylesheet" href="/CSS/index.css">
     <link rel="stylesheet" href="/CSS/product.css">
@@ -58,20 +54,20 @@
     </div>
     <div class="container-fluid">
         <div class="intro mt-5">
-            <section class="text-light w-50 ml-3 text-break">
+            <div class="text-light w-50 ml-3 text-break">
                 <span class="overflow-auto">Smart Phones<span class="text-danger">.</span></span>
                 <p>Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit. Nullam a ultricies metus.
                     Sed nec molestie eros.
                     Sed viverra velit venenatis fermentum luctus.</p>
-            </section>
+            </div>
         </div>
     </div>
     <div class="container w3-animate-bottom">
         <div class="row">
             <div class="col">
                 <div class="container mt-5">
-                    <img id="expandedImg" class="w-100">
+                    <img id="expandedImg" class="w-100" alt="">
                     <div id="imgtext"></div>
                 </div>
                 <div class="container">
