radios in cart page is fixed now

--- a/cart.html
+++ b/cart.html
@@ -128,30 +128,33 @@
                 </div>
                 <div class="delivery-options">
                     <div class="option">
-                        <div class="form">
-                            <input type="radio" style="accent-color: rgb(15, 15, 146);">
-                            <p class="mt-3">Next day delivery</p>
+                        <div class="form-check">
+                            <input type="radio" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" id="radio1" name="optradio" value="option1" checked>
+                            <p>Next day delivery</p>
                         </div>
                         <div class="option-price">
-                            <p class="mt-3">$4.99</p>
+                            <p>$4.99</p>
                         </div>
                     </div>
                     <div class="option">
-                        <div class="form">
-                            <input type="radio" style="accent-color: rgb(15, 15, 146);">
-                            <p class="mt-3">Standard delivery</p>
+                        <div class="form-check">
+                            <input type="radio" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" id="radio2" name="optradio" value="option2">
+                            <p>Standard delivery</p>
                         </div>
                         <div class="option-price">
-                            <p class="mt-3">$1.99</p>
+                            <p>$1.99</p>
                         </div>
                     </div>
                     <div class="option">
-                        <div class="form">
-                            <input type="radio" style="accent-color: rgb(15, 15, 146);">
-                            <p class="mt-3">Personal pick-up</p>
+                        <div class="form-check">
+                            <input type="radio" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" id="radio3" name="optradio" value="option3">
+                            <p>Personal pick-up</p>
                         </div>
                         <div class="option-price">
-                            <p class="mt-3">Free</p>
+                            <p>Free</p>
                         </div>
                     </div>
                 </div>
