--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                     <h3 class="font-weight-bolder">Get in Touch
                     </h3>
                     <p class="w3-opacity">Say hello</p>
-                    <div class="name w-100">
+                    <div class="name w-100 mt-t">
                         <div class="form-group w-100">
                             <label for="first-name">First Name</label>
                             <input type="text" class="form-control" id="first-name" name="first-name" required>
@@ -79,21 +79,21 @@
                             <input type="text" class="form-control" id="last-name" name="last-name" required>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mt-5">
                         <label for="email">Email</label>
                         <input type="email" class="form-control" id="email" name="email" required>
                     </div>
                 
-                    <div class="form-group">
+                    <div class="form-group mt-5">
                         <label for="subject">Subject</label>
                         <input type="text" class="form-control" id="subject" name="subject" required>
                     </div>
                 
-                    <div class="form-group">
+                    <div class="form-group mt-5">
                         <label for="message">Message</label>
                         <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                     </div>
-                    <a href="mailto:yourmail@gmail.com" class="text-decoration-none text-light btn text-light bg-dark p-3 w-50">Send Message</a>
+                    <a href="mailto:yourmail@gmail.com" class="text-decoration-none text-light btn text-light mt-5 bg-dark p-3 w-50">Send Message</a>
                 </form>
             </div>
             <div class="col-md-3 w3-animate-bottom">
@@ -124,13 +124,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid mt-5 w3-animate-bottom">
-        <div class="center">
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387239.74771779357!2d-74.20902059960937!3d40.689158152629616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sse!4v1698010459531!5m2!1sen!2sse" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
