buttons, radios custom

--- a/cart.html
+++ b/cart.html
@@ -110,11 +110,11 @@
         <div class="main-buttons mt-5 w3-animate-bottom">
             <div class="inside-buttons">
                 <div class="proceed">
-                    <button class="p-4">Continue Shipping</button>
+                    <button class="p-4 w3-hover-black">Continue Shipping</button>
                 </div>
                 <div class="update-products">
-                    <button class="p-4">Clear Cart</button>
-                    <button class="p-4">Update Cart</button>
+                    <button class="p-4 w3-hover-black">Clear Cart</button>
+                    <button class="p-4 w3-hover-black">Update Cart</button>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="code-input">
                         <input class="p-2 form-control" type="text" name="code" id="code">
-                        <button class="p-2" type="button">Apply</button>
+                        <button class="p-2 w3-hover-black" type="button">Apply</button>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="p-3 w-100 mt-3" type="button">
+                <button class="p-3 w-100 mt-3 w3-hover-black" type="button">
                     Proceed to checkout
                 </button>
             </div>
