--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                         <label for="message">Message</label>
                         <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                     </div>
-                    <a href="mailto:yourmail@gmail.com" class="text-decoration-none text-light btn text-light mt-5 bg-dark p-3 w-50">Send Message</a>
+                    <a href="mailto:yourmail@gmail.com" class="btn w3-hover-black text-decoration-none text-light btn text-light mt-5 text-black p-3 w-50">Send Message</a>
                 </form>
             </div>
             <div class="col-md-3 w3-animate-bottom">
