--- a/checkout.html
+++ b/checkout.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="CSS/cart.css">
     <link rel="stylesheet" href="CSS/checkout.css">
 </head>
-
 <body>
     <div class="container-fluid w3-animate-zoom bg-light">
         <div class="container">
@@ -97,15 +96,15 @@
                         <input type="text" id="city-town" class="form-control" name="city-town" required>
 
                         <label for="province">Province</label>
-                        <input type="text" id="province" class="form-control" name="province">
+                        <input type="text" id="province" class="form-control" name="province" required>
 
                         <label for="phone-no">Phone no*</label>
-                        <input type="tel" id="phone-no" class="form-control" name="phone-no" required>
+                        <input type="tel" id="phone-no" class="form-control" name="phone-no"  required>
 
                         <label for="email-address">Email Address*</label>
                         <input type="email" id="email-address" class="form-control" name="email-address" required>
 
-                        <button type="submit" class="btn w-100 w3-border-black p-3">Submit</button>
+                        <button type="submit" class="btn w-100 mt-5 w3-border-black w3-hover-black p-3">Submit</button>
                     </form>
                 </div>
             </div>
@@ -136,25 +135,37 @@
                 </div>
                 <div class="payment-method mt-4">
                     <div class="paypal">
-                        <input type="radio">
-                        <p class="mt-3">Paypal</p>
+                        <div class="form-check">
+                            <input type="radio" id="radio1" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" name="optradio" value="option1" checked>
+                            <p>Paypal</p>
+                        </div>
                     </div>
                     <div class="cash">
-                        <input type="radio">
-                        <p class="mt-3">Cash</p>
+                        <div class="form-check">
+                            <input type="radio" id="radio2" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" name="optradio" value="option2">
+                            <p>Cash</p>
+                        </div>
                     </div>
                     <div class="credit">
-                        <input type="radio">
-                        <p class="mt-3">Credit</p>
+                        <div class="form-check">
+                            <input type="radio" id="radio3" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" name="optradio" value="option3">
+                            <p>Credit</p>
+                        </div>
                     </div>
                     <div class="direct-bank">
-                        <input type="radio">
-                        <p class="mt-3">Bank-transfer</p>
+                        <div class="form-check">
+                            <input type="radio" id="radio4" style="border: 1px solid  rgb(15, 15, 146);"
+                            class="form-check-input" name="optradio" value="option4">
+                            <p>Bank-transfer</p>
+                        </div>
                     </div>
                 </div>
                 <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra temp or so dales. Phasellus
                     sagittis auctor gravida. Integ er bibendum sodales arcu id te mpus. Ut consectetur lacus.</p>
-                <button class="btn w3-border-black w3-text-black mt-5 w-100 p-4">Place order</button>
+                <button class="btn w3-border-black w3-hover-black w3-text-black mt-5 w-100 p-4">Place order</button>
             </div>
         </div>
     </div>
