--- a/categories.html
+++ b/categories.html
@@ -13,6 +13,27 @@
     <title>Categories</title>
     <link rel="stylesheet" href="/CSS/index.css">
 </head>
+<style>
+.product3 {
+    position: relative;
+    overflow: hidden;
+}
+
+.product3::before {
+    content: 'Hot';
+    position: absolute;
+    top: 0;
+    left: 40px;
+    width: 35px;
+    height: 70px;
+    writing-mode: vertical-lr;
+    text-orientation:sideways;
+    line-height: 2.2;
+    text-align: center;
+    color: white;
+    background-color: #FF4500;
+}
+</style>
 <body>
     <div class="container-fluid w3-animate-zoom  bg-light">
         <div class="container">
@@ -87,7 +108,7 @@
             </div>
         </div>
         <div class="row mt-md-5">
-            <div class="col-md-3">
+            <div class="col-lg-3 col-sm-6">
                 <div class="product5-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_4.jpg.webp" alt="product5"
                         class="img-fluid">
@@ -95,7 +116,7 @@
                 <h5 class="w3-hover-text-red">Computer</h5>
                 <p>$200</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6">
                 <div class="product6-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_10.jpg.webp" alt="product6"
                         class="img-fluid">
@@ -103,7 +124,7 @@
                 <h5 class="w3-hover-text-red">Smart headphone</h5>
                 <p>$100</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6">
                 <div class="product7-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_9.jpg.webp" alt="product6"
                         class="img-fluid">
@@ -111,7 +132,7 @@
                 <h5 class="w3-hover-text-red">Smart</h5>
                 <p>$400</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6">
                 <div class="product8-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_8.jpg.webp" alt="product8"
                         class="img-fluid">
@@ -121,25 +142,25 @@
             </div>
         </div>
         <div class="row mt-md-5">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product3">
                 <img src="https://preview.colorlib.com/theme/sublime/images/product_2.jpg.webp" alt="product9"
                     class="img-fluid">
                 <h5 class="w3-hover-text-red">Speaker</h5>
                 <p>$300</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product3">
                 <img src="https://preview.colorlib.com/theme/sublime/images/product_12.jpg.webp" alt="product9"
                     class="img-fluid">
                 <h5 class="w3-hover-text-red">Speaker</h5>
                 <p>$300</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product3">
                 <img src="https://preview.colorlib.com/theme/sublime/images/product_1.jpg.webp" alt="product10"
                     class="img-fluid">
                 <h5 class="w3-hover-text-red">Speaker</h5>
                 <p>$300</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product3">
                 <img src="https://preview.colorlib.com/theme/sublime/images/product_3.jpg.webp" alt="product9"
                     class="img-fluid">
                 <h5 class="w3-hover-text-red">Speaker</h5>
