--- a/home.html
+++ b/home.html
@@ -102,31 +102,31 @@
     </div>
     <div class="container mt-5 w3-animate-left">
         <div class="row items-rwo">
-            <div class="col-md-3 col-sm-6 product">
+            <div class="col-lg-3 col-sm-6 col-md-6 product">
                 <img src="/Images/product1.png" alt="product1" class="img-fluid">
                 <h5 class="w3-hover-text-red">Smart Phone</h5>
                 <p>$70</p>
             </div>
-            <div class="col-md-3 col-sm-6 product">
+            <div class="col-lg-3 col-sm-6 col-md-6 product">
                 <img src="/Images/product2.png" alt="product2" class="img-fluid">
                 <h5 class="w3-hover-text-red">Smart headphone</h5>
                 <p>$150</p>
             </div>
-            <div class="col-md-3 col-sm-6 product">
+            <div class="col-lg-3 col-sm-6 col-md-6 product">
                 <img src="https://preview.colorlib.com/theme/sublime/images/product_11.jpg.webp" alt="product3"
                 class="img-fluid">
                 <h5 class="w3-hover-text-red">Play Station 5</h5>
                 <p>$500</p>
             </div>
-            <div class="col-md-3 col-sm-6 product">
+            <div class="col-lg-3 col-sm-6 col-md-6 product">
                 <img src="https://preview.colorlib.com/theme/sublime/images/product_6.jpg.webp" alt="product4"
                 class="img-fluid">
                 <h5 class="w3-hover-text-red">Phone</h5>
             <p>$100</p>
             </div>
         </div>
-        <div class="row mt-md-5">
-            <div class="col-md-3 col-sm-6">
+        <div class="row mt-lg-5">
+            <div class="col-lg-3 col-sm-6 product2">
                 <div class="product5-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_4.jpg.webp" alt="product5"
                         class="img-fluid">
@@ -134,7 +134,7 @@
                 <h5 class="w3-hover-text-red">Computer</h5>
                 <p>$200</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product2">
                 <div class="product6-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_10.jpg.webp" alt="product6"
                         class="img-fluid">
@@ -142,7 +142,7 @@
                 <h5 class="w3-hover-text-red">Smart headphone</h5>
                 <p>$100</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product2">
                 <div class="product7-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_9.jpg.webp" alt="product6"
                         class="img-fluid">
@@ -150,7 +150,7 @@
                 <h5 class="w3-hover-text-red">Smart</h5>
                 <p>$400</p>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-lg-3 col-sm-6 product2">
                 <div class="product8-img">
                     <img src="https://preview.colorlib.com/theme/sublime/images/product_8.jpg.webp" alt="product8"
                         class="img-fluid">
